Mac: Fix SSLClientCertificateSelectorCocoaTest.HideShow (fails on macOS Sierra).

SSLClientCertificateSelectorCocoaTest.HideShow is failing on macOS Sierra,
blocking 10.12 rollout for Chrome. Fix this using the same refactor as seen in
r400627, which ignores mouse events instead of resizing the certificate selector
window when it's hidden.

BUG=650898

Review-Url: https://codereview.chromium.org/2559763003
Cr-Commit-Position: refs/heads/master@{#438065}

Former-commit-id: 88fc23eb6caa37caec392c54ceeab245e5adaac3